- fixes positioning of vertical slider - fixes wrong background color floating combobox - fixes wrong overflow in groups

--- a/material-addon/src/main/webapp/VAADIN/themes/material/components/v-csslayout.scss
+++ b/material-addon/src/main/webapp/VAADIN/themes/material/components/v-csslayout.scss
@@ -2,12 +2,15 @@
     .v-component-group .v-widget:not(.v-label) {
         box-shadow: 0 1px 3px rgba(0, 0, 0, 0.35) !important;
         border: none;
+        overflow: hidden;
     }
     .v-component-group .v-widget:not(.v-label):hover {
         box-shadow: 0 1px 3px rgba(0, 0, 0, 0.40) !important;
         border: none;
+        overflow: hidden;
     }
     .v-component-group .v-button {
         padding: 0 10px;
+        overflow: hidden;
     }
 }
