--- a/material-addon/src/main/webapp/VAADIN/themes/material/components/v-progressbar.scss
+++ b/material-addon/src/main/webapp/VAADIN/themes/material/components/v-progressbar.scss
@@ -28,6 +28,6 @@
     }
     .v-slider-vertical .v-slider-handle:before,
     .v-slider-vertical .v-slider-handle:after {
-        margin-left: -9px;
+        margin-left: -floor($v-unit-size * 0.244);
     }
 }
